flux/apps/ext/netbird/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-route
  namespace: netbird
spec:
  parentRefs:
    - { name: traefik-gateway, namespace: traefik-ext }
  hostnames: [ "netbird.fingol.pro" ]
  rules:
    - backendRefs: [ { name: netbird-management, port: 80 } ]
      matches:
        - headers: [ { name: Content-Type, value: application/grpc } ]
          method: { service: management.ManagementService }
    - backendRefs: [ { name: signal, port: 80 } ]
      matches:
        - headers: [ { name: Content-Type, value: application/grpc } ]
          method: { service: signalexchange.SignalExchange }
